# website

./: .gitignore  Cargo.toml  README.md  build_and_deploy.sh  compose.yml
migrations/: 20240919210738_init.sql
src/: config.rs  error.rs  main.rs  routes.rs  templates.rs
src/db/: functions.rs  migrations.rs  mod.rs  types.rs
static/: style.css
templates/: 404.html  500.html  base.html  blog_index.html  index.html  post.html
