[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
chrono = "0.4.34"
color-eyre = "0.6.2"
itertools = "0.12.1"
sqlx = { version = "0.7.3", features = [
  "postgres",
  "uuid",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "1.0.56"
tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
